--- a/swap/index.html
+++ b/swap/index.html
@@ -26,11 +26,9 @@
     </style>
   </head>
   <body>
-    <div class="box1">1</div>
-    <div class="box2">2</div>
-    <div class="box2">3</div>
-    <div class="box2">4</div>
-    <div class="box2">5</div>
+    <img src="" alt="" />
+    <img src="" alt="" />
+    <img src="" alt="" />
 
     <script src="./app.js"></script>
   </body>
